# AI-Empowered-IPTC-Website

./: # AI赋能思政课网站 - 项目改造方案.txt  # Message Platform 项目架构文档.txt  .env  .gitignore  .gitmodules  AI 相关信息网址.docx  CLAUDE.md  Dockerfile  GitHub上传操作指南.md  IPTC案例生成系统使用指南.md  IPTC流程.md  README.md  README_IPTC.md  add_ai_tag_field.py  add_nikkei_fields.sql  aihub_raw.html  auto_batch_scheduler.py  auto_collector_scheduler.py  bash.exe.stackdump  check_case.py  check_stats.py  cigi_page.html  config.yaml  data_message_sources.sql  demo_globe_optimized.html  docker-compose.yml  export_cases_to_json.py  git_upload.bat  init-db.sql  init_database.py  init_database.sql  init_db.sql  insert_message_sources_utf8.sql  list_collections.py  oecd_main_content.html  package-lock.json  platform.md  register_venturebeat.py  requirements.docker.txt  requirements.txt  (+54 more)
.claude/: settings.local.json
GraphRAG/: README.md  requirements.txt
GraphRAG-Visualizer/: .gitignore  GraphRAG-Local-UI部署说明.md  README.md  快速开始指南.md
backend/: celeryconfig.py  main.py  start_all.py
backend/Graph/GraphRAG/: pyproject.toml
backend/Graph/GraphRAG/config/: default_config.yaml
backend/Graph/GraphRAG/config/prompts/: entity_extraction.txt
backend/Graph/GraphRAG/examples/: basic_usage.py  custom_llm.py
backend/Graph/GraphRAG/graphrag/core/: graph_builder.py  storage.py
backend/Graph/GraphRAG/graphrag/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
backend/Graph/GraphRAG/graphrag/schemas/: __init__.py  entity.py  graph.py
backend/Graph/GraphRAG/graphrag/utils/: graph_formatter.py
(+811 files in other folders)
