[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag"
version = "0.1.0"
description = "独立的GraphRAG工具包，支持实体提取、图谱构建和增强检索"
authors = [{name = "GraphRAG Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["graph", "rag", "knowledge-graph", "neo4j", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "neo4j",
    "aiohttp",
    "pydantic",
    "pyyaml",
    "rapidfuzz",
    "colorlog",
    "python-dotenv",
]

[project.optional-dependencies]
openai = ["openai"]
anthropic = ["anthropic"]
all = ["openai", "anthropic"]
dev = ["pytest", "pytest-asyncio", "black"]

[project.urls]
Homepage = "https://github.com/yourusername/graphrag"
Documentation = "https://graphrag.readthedocs.io"
Repository = "https://github.com/yourusername/graphrag"

[tool.setuptools]
packages = ["graphrag", "graphrag.core", "graphrag.utils", "graphrag.llm", "graphrag.schemas"]
